// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:#ffeedd"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="colorPickerAnchor"
                maxlength="7"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with a color swatch when color is defined 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:#ffffff"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="colorPickerAnchor"
                maxlength="7"
                type="text"
                value="#FFFFFF"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with an empty swatch when color is "" 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div>
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="colorPickerAnchor"
                maxlength="7"
                placeholder="Transparent"
                type="text"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders EuiColorPicker with an empty swatch when color is null 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div>
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="colorPickerAnchor"
                maxlength="7"
                placeholder="Transparent"
                type="text"
                value=""
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders compressed EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--compressed"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:#ffeedd"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon euiFieldText--compressed"
                data-test-subj="colorPickerAnchor"
                maxlength="7"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders disabled EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:#ffeedd"
        >
          <div
            class="euiFormControlLayout"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="colorPickerAnchor"
                disabled=""
                maxlength="7"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders fullWidth EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--fullWidth"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:#ffeedd"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon euiFieldText--fullWidth"
                data-test-subj="colorPickerAnchor"
                maxlength="7"
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders inline EuiColorPicker 1`] = `
<div
  class="euiColorPicker testClass1 testClass2"
>
  <div>
    <div
      aria-activedescendant="undefined-saturationIndicator"
      aria-describedby="undefined-saturationDescription"
      aria-roledescription="HSV color mode saturation and value selection"
      class="euiSaturation"
      data-test-subj="euiSaturation"
      role="application"
      style="background:hsl(30, 100%, 50%)"
      tabindex="0"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Use the arrow keys to navigate the square color gradient. The coordinates resulting from each key press will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right decrease and increase (respectively) the 'saturation' value. Up and down decrease and increase (respectively) the 'value' value.
      </p>
      <p
        aria-live="polite"
        class="euiScreenReaderOnly"
      >
        #ffeedd
      </p>
      <div
        class="euiSaturation__lightness"
      >
        <div
          class="euiSaturation__saturation"
        />
      </div>
      <div
        class="euiSaturation__indicator"
        id="undefined-saturationIndicator"
        style="left:0;top:0"
      />
    </div>
    <label
      class="euiScreenReaderOnly"
      for="undefined-hue"
    >
      Select the HSV color mode 'hue' value
    </label>
    <p
      aria-live="polite"
      class="euiScreenReaderOnly"
    >
      #ffeedd
    </p>
    <div
      class="euiHue"
    >
      <input
        class="euiHue__range"
        id="undefined-hue"
        max="360"
        min="0"
        step="1"
        type="range"
        value="30"
      />
    </div>
  </div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--wrap"
    role="listbox"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #00B3A4 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#00B3A4"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #3185FC as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#3185FC"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #DB1374 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#DB1374"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #490092 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#490092"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #FEB6DB as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#FEB6DB"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #E6C220 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#E6C220"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #F98510 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#F98510"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #BFA180 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#BFA180"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #461A0A as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#461A0A"
        type="button"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Select #920000 as the color"
        class="euiColorPickerSwatch euiColorPicker__swatchSelect"
        role="option"
        style="background:#920000"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`renders readOnly EuiColorPicker 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock"
>
  <div
    class="euiPopover__anchor"
  >
    <div
      class="euiFormControlLayout euiFormControlLayout--readOnly"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          style="color:#ffeedd"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--readOnly"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Press the down key to open a popover containing color options"
                autocomplete="off"
                class="euiFieldText euiColorPicker__input euiFieldText--withIcon"
                data-test-subj="colorPickerAnchor"
                maxlength="7"
                readonly=""
                type="text"
                value="#FFEEDD"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
